[tool.poetry]
name = "event_aug"
version = "0.0.1"
description = ""
authors = ["NeelayS <shahnh19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
tables = "^3.7.0"
opencv-python = "^4.6.0"
numpy-stl = "^2.17.1"
matplotlib = "^3.5.2"
noise = "^1.2.2"
torch = "^1.11.0"
scikit-video = "^1.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
