[tool.poetry]
name = "event_aug"
version = "0.0.1"
description = "A Python package for augmenting event-camera datasets"
authors = ["NeelayS <shahnh19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
tables = "^3.7.0"
opencv-python = "^4.6.0"
numpy-stl = "^2.17.1"
matplotlib = "^3.5.2"
noise = "^1.2.2"
torch = "^1.11.0"
perlin-numpy = {git = "https://github.com/pvigier/perlin-numpy"}
h5py = "^3.7.0"
youtube_dl = {version = "^2021.12.17", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.19.0"
pytest-cov = "^3.0.0"
ipykernel = "^6.15.1"

[tool.poetry.extras]
youtube = ["youtube_dl"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
preview = true

[tool.isort]
profile = "black"